# omega

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.py  vcpkg.json
.cache/clangd/index/: InstructionList.cpp.0A5B4E01279A099C.idx  InstructionList.h.5F568A21D79F02BD.idx  lexer.cpp.560E873884A16F2F.idx  lexer.h.4CC18DF0C2FE12F6.idx  main.cpp.24D58B78B507A8F0.idx  special_symbols.h.746A8331B7B3EAE8.idx  symbols.cpp.0022607801CFFC9C.idx  symbols.h.C8C9C27BA864A3BE.idx
src/: main.cpp
src/lexer/: CMakeLists.txt
src/lexer/include/omega/lexer/: InstructionList.h  Lexer.h  lexer.h
src/lexer/src/: InstructionList.cpp  Lexer.cpp  Symbols.h  lexer.cpp  lexer_cutter.cpp  lexer_cutter.h  lexer_tokenizer.cpp  lexer_tokenizer.h  special_symbols.h  symbols.cpp  symbols.h
src/lexer/src/cutter/: CMakeLists.txt
src/lexer/src/cutter/include/omega/lexer/cutter/: Cutter.h
src/lexer/src/cutter/src/: Cutter.cpp
src/lexer/src/tokenizer/: CMakeLists.txt
src/lexer/src/tokenizer/include/omega/lexer/tokenizer/: Tokenizer.h
src/lexer/src/tokenizer/src/: Tokenizer.cpp
src/parser/: CMakeLists.txt
src/parser/include/omega/parser/: Parser.h
src/parser/src/: Parser.cpp
src/token/: CMakeLists.txt
src/token/include/omega/token/: Token.h
src/token/src/: Token.cpp
